lab/apps/code-server/code-server-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-svc-ui
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - name: svc-ui
      port: 8443
