lab/apps/code-server/code-server-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-ingress
  namespace: code-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.${SECRET_INT_DOMAIN}`)
      kind: Rule
      services:
        - name: ui-svc
          port: 8443
  tls:
    secretName: prod-code-${SECRET_INT_CERT_DOMAIN}
---
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: code.${SECRET_INT_DOMAIN}
      namespace: code-server
    spec:
      secretName: prod-code-${SECRET_INT_CERT_DOMAIN}
      issuerRef:
        name: letsencrypt-production
        kind: ClusterIssuer
      commonName: "code.${SECRET_INT_DOMAIN}"
      dnsNames:
      - "code.${SECRET_INT_DOMAIN}"
